--- a/index.html
+++ b/index.html
@@ -2,186 +2,148 @@
 <html lang="hi">
 <head>
 <meta charset="UTF-8">
-<title>SR Enterprise</title>
+<title>Dekho App</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-:root{
-  --primary:#6a4cff;
-  --secondary:#ff8a00;
-}
+:root{--primary:#6a4cff;--secondary:#ff8a00}
 *{box-sizing:border-box;margin:0;padding:0}
-
 body{
-  font-family:'Inter',sans-serif;
-  background:
-    radial-gradient(circle at top,#eef1ff,transparent 60%),
-    linear-gradient(#f6f7fb,#fff);
+ font-family:'Inter',sans-serif;
+ background:
+ radial-gradient(circle at top,#eef1ff,transparent 60%),
+ linear-gradient(#f6f7fb,#fff);
 }
 
 /* HERO */
 .hero{
-  padding:70px 16px 40px;
-  text-align:center;
-  background:linear-gradient(135deg,#6a4cff,#8f6bff);
-  color:#fff;
+ padding:70px 16px 30px;
+ text-align:center;
+ background:linear-gradient(135deg,#6a4cff,#8f6bff);
+ color:#fff;
 }
-.hero h1{font-size:36px}
-.hero p{margin-top:8px;font-size:16px}
+.hero h1{font-size:38px}
+.hero p{
+ margin-top:15px;
+ line-height:1.7;
+ font-size:15px;
+ max-width:700px;
+ margin-inline:auto;
+}
+
+/* TOP VIDEO */
+.top-video{
+ max-width:380px;
+ margin:30px auto 10px;
+ aspect-ratio:9/16;
+ border-radius:20px;
+ overflow:hidden;
+ box-shadow:0 15px 40px rgba(0,0,0,.4);
+}
+.top-video iframe{width:100%;height:100%;border:0}
 
 /* FOUNDER */
 .founder{
-  margin:30px auto 10px;
-  text-align:center;
+ margin:35px auto 10px;
+ text-align:center;
 }
 .founder img{
-  width:130px;
-  height:130px;
-  border-radius:50%;
-  object-fit:cover;
-  border:4px solid #fff;
-  box-shadow:0 12px 30px rgba(0,0,0,.35);
+ width:130px;height:130px;border-radius:50%;
+ object-fit:cover;border:4px solid #fff;
+ box-shadow:0 12px 30px rgba(0,0,0,.35);
 }
-.founder h3{
-  margin-top:12px;
-  font-size:17px;
-  font-weight:600;
-}
-.founder span{
-  font-size:14px;
-  opacity:.9;
-}
+.founder h3{margin-top:12px;font-size:17px}
+.founder span{font-size:14px;opacity:.9}
 
 /* BUTTON */
 .btn{
-  margin-top:25px;
-  border:none;
-  background:linear-gradient(135deg,var(--secondary),#ff6200);
-  color:#fff;
-  padding:15px 34px;
-  font-size:16px;
-  font-weight:600;
-  border-radius:999px;
-  cursor:pointer;
-  box-shadow:0 12px 28px rgba(255,138,0,.45);
+ margin-top:25px;border:none;
+ background:linear-gradient(135deg,var(--secondary),#ff6200);
+ color:#fff;padding:16px 36px;
+ font-size:16px;font-weight:600;
+ border-radius:999px;cursor:pointer;
+ box-shadow:0 12px 28px rgba(255,138,0,.45);
 }
 
-/* VIDEO */
+/* VIDEOS */
 .video-card{
-  max-width:420px;
-  margin:55px auto;
-  padding:22px;
-  background:#fff;
-  border-radius:24px;
-  box-shadow:0 18px 40px rgba(0,0,0,.12);
-  text-align:center;
+ max-width:420px;margin:55px auto;
+ padding:22px;background:#fff;border-radius:24px;
+ box-shadow:0 18px 40px rgba(0,0,0,.12);
+ text-align:center;
 }
-.video-title{font-weight:600}
 .timer{font-size:14px;color:#666;margin:8px 0 12px}
-.video-wrapper{
-  aspect-ratio:9/16;
-  border-radius:18px;
-  overflow:hidden;
-  background:#000;
-}
+.video-wrapper{aspect-ratio:9/16;border-radius:18px;overflow:hidden;background:#000}
 iframe{width:100%;height:100%;border:0}
 
 /* POPUPS */
 .popup{
-  position:fixed;
-  inset:0;
-  display:none;
-  align-items:center;
-  justify-content:center;
-  background:rgba(0,0,0,.7);
-  z-index:999;
+ position:fixed;inset:0;display:none;
+ align-items:center;justify-content:center;
+ background:rgba(0,0,0,.7);z-index:999;
 }
 .popup-box{
-  width:90%;
-  max-width:360px;
-  background:#fff;
-  padding:26px;
-  border-radius:26px;
-  text-align:center;
+ width:90%;max-width:360px;background:#fff;
+ padding:26px;border-radius:26px;text-align:center;
 }
 .popup-box h3{color:#22c55e}
 .popup-box button{
-  margin-top:18px;
-  width:100%;
-  padding:14px;
-  border:none;
-  border-radius:999px;
-  background:linear-gradient(135deg,var(--primary),#8f6bff);
-  color:#fff;
-  font-weight:600;
+ margin-top:18px;width:100%;padding:14px;border:none;
+ border-radius:999px;background:linear-gradient(135deg,var(--primary),#8f6bff);
+ color:#fff;font-weight:600;
 }
 
 /* PAYMENT */
-.qr-img{
-  width:220px;
-  margin:10px auto 15px;
-  display:block;
-}
+.qr-img{width:220px;margin:10px auto 15px;display:block}
 .wa-btn{
-  display:block;
-  margin-top:15px;
-  padding:14px;
-  border-radius:999px;
-  background:#25D366;
-  color:#fff;
-  text-decoration:none;
-  font-weight:600;
+ display:block;margin-top:15px;padding:14px;
+ border-radius:999px;background:#25D366;
+ color:#fff;text-decoration:none;font-weight:600;
 }
 </style>
 </head>
 
 <body>
 
-<!-- HERO -->
 <section class="hero">
-  <h1>SR Enterprise</h1>
-  <p>वीडियो देखें और ₹2 प्रति वीडियो कमाएँ</p>
+<h1>Dekho App</h1>
 
-  <!-- FOUNDER -->
-  <div class="founder">
-    <img src="https://i.ibb.co/C5LYvDdp/Whats-App-Image-2026-01-26-at-4-39-12-PM.jpg" loading="lazy">
-    <h3>प्रोपराइटर चौधरी डाक्टर शेरा प्रवीण</h3>
-    <span>Founder – SR Enterprise</span>
-  </div>
+<p>
+देखो ऐप एक ऐसा प्लेटफार्म है जहां से आप रोजाना 500 से 1000 रूपये कमा सकते हैं विडियो देखकर इसके लिए आपको अपने मोबाइल फोन मे आई डी बनवानी पडेगी जिस आई डी पर आप रोजाना 1000 विडियो तक देख सकते हैं और 2000 रूपये रोजाना कमा सकते हैं अधिक जानकारी के लिए हमारे व्हाइट सप नम्बर पर मैसेज कर सकते हैं
+</p>
 
-  <button class="btn" onclick="scrollToVideo(0)">कमाना शुरू करें</button>
+<!-- TOP LANDING VIDEO -->
+<div class="top-video">
+<iframe src="https://jumpshare.com/embed/xqJDGmAJxYA0JzSZV4dW" allowfullscreen></iframe>
+</div>
+
+<div class="founder">
+<img src="https://i.ibb.co/C5LYvDdp/Whats-App-Image-2026-01-26-at-4-39-12-PM.jpg">
+<h3>प्रोपराइटर चौधरी डाक्टर शेरा प्रवीण</h3>
+<span>Founder</span>
+</div>
+
+<button class="btn" onclick="scrollToVideo(0)">कमाना शुरू करें</button>
 </section>
 
 <div id="videoContainer"></div>
 
-<!-- EARNING POPUP -->
+<!-- POPUPS SAME AS BEFORE -->
 <div class="popup" id="popup">
-  <div class="popup-box">
-    <h3>🎉 बधाई हो!</h3>
-    <p id="popupText"></p>
-    <button id="popupBtn">ठीक है</button>
-  </div>
+ <div class="popup-box">
+  <h3>🎉 बधाई हो!</h3>
+  <p id="popupText"></p>
+  <button id="popupBtn">ठीक है</button>
+ </div>
 </div>
 
-<!-- REGISTER / PAYMENT POPUP -->
 <div class="popup" id="registerPopup">
-  <div class="popup-box">
-    <img class="qr-img"
-      src="https://i.ibb.co/Fk9gVV5n/Whats-App-Image-2026-01-27-at-1-19-46-PM.jpg">
-
-    <p>
-      इस QR कोड पर <b>₹5500</b> का पेमेंट करें<br>
-      और हमें उसका स्क्रीनशॉट भेजें
-    </p>
-
-    <a class="wa-btn"
-       href="https://wa.me/919811510887"
-       target="_blank">
-       स्क्रीनशॉट भेजें
-    </a>
-  </div>
+ <div class="popup-box">
+  <img class="qr-img" src="https://i.ibb.co/Fk9gVV5n/Whats-App-Image-2026-01-27-at-1-19-46-PM.jpg">
+  <p>इस QR कोड पर <b>₹5500</b> का पेमेंट करें और स्क्रीनशॉट भेजें</p>
+  <a class="wa-btn" href="https://wa.me/919811510887" target="_blank">स्क्रीनशॉट भेजें</a>
+ </div>
 </div>
 
 <script>
@@ -197,78 +159,56 @@ const container=document.getElementById("videoContainer");
 let active=null,timer=null,played=new Set();
 
 videos.forEach((v,i)=>{
-  const card=document.createElement("div");
-  card.className="video-card";
-  card.dataset.index=i;
-  card.id="video-"+i;
-  card.innerHTML=`
-    <div class="video-title">वीडियो ${i+1}</div>
-    <div class="timer" id="timer-${i}">
-      समय बचा है: ${v.time} सेकंड
-    </div>
-    <div class="video-wrapper">
-      <iframe src="${v.src}" loading="lazy" allowfullscreen></iframe>
-    </div>`;
-  container.appendChild(card);
+ const card=document.createElement("div");
+ card.className="video-card";
+ card.dataset.index=i;
+ card.id="video-"+i;
+ card.innerHTML=`
+  <div class="timer" id="timer-${i}">समय बचा है: ${v.time} सेकंड</div>
+  <div class="video-wrapper">
+   <iframe src="${v.src}" loading="lazy" allowfullscreen></iframe>
+  </div>`;
+ container.appendChild(card);
 });
 
 const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>{
-    if(e.isIntersecting){
-      const i=+e.target.dataset.index;
-      if(!played.has(i)){
-        startTimer(i);
-        played.add(i);
-      }
-    }
-  });
+ entries.forEach(e=>{
+  if(e.isIntersecting){
+   const i=+e.target.dataset.index;
+   if(!played.has(i)){startTimer(i);played.add(i);}
+  }
+ });
 },{threshold:.75});
 
 document.querySelectorAll(".video-card").forEach(v=>observer.observe(v));
 
 function startTimer(i){
-  clearInterval(timer);
-  active=i;
-  let t=videos[i].time;
-  const el=document.getElementById("timer-"+i);
-  timer=setInterval(()=>{
-    t--;
-    el.textContent=`समय बचा है: ${t} सेकंड`;
-    if(t<=0){
-      clearInterval(timer);
-      showPopup(i);
-    }
-  },1000);
+ clearInterval(timer);
+ active=i;
+ let t=videos[i].time;
+ const el=document.getElementById("timer-"+i);
+ timer=setInterval(()=>{
+  t--;
+  el.textContent=`समय बचा है: ${t} सेकंड`;
+  if(t<=0){clearInterval(timer);showPopup(i);}
+ },1000);
 }
 
 function showPopup(i){
-  popup.style.display="flex";
-  if(videos[i].last){
-    popupText.textContent="आपने ₹2 कमा लिए हैं। आगे बढ़ने के लिए रजिस्टर करें।";
-    popupBtn.textContent="रजिस्टर करें";
-    popupBtn.onclick=openRegister;
-  }else{
-    popupText.textContent="आपने ₹2 कमा लिए हैं। अगला वीडियो देखें।";
-    popupBtn.textContent="अगला वीडियो";
-    popupBtn.onclick=closePopup;
-  }
-}
-
-function closePopup(){
-  popup.style.display="none";
-  if(!videos[active].last){
-    scrollToVideo(active+1);
-  }
-}
-
-function openRegister(){
-  popup.style.display="none";
-  registerPopup.style.display="flex";
+ popup.style.display="flex";
+ if(videos[i].last){
+  popupText.textContent="आपने ₹2 कमा लिए हैं। रजिस्टर करें।";
+  popupBtn.textContent="रजिस्टर करें";
+  popupBtn.onclick=()=>{popup.style.display="none";registerPopup.style.display="flex";}
+ }else{
+  popupText.textContent="आपने ₹2 कमा लिए हैं। अगला वीडियो देखें।";
+  popupBtn.textContent="अगला वीडियो";
+  popupBtn.onclick=()=>{popup.style.display="none";scrollToVideo(active+1);}
+ }
 }
 
 function scrollToVideo(i){
-  document.getElementById("video-"+i)
-  ?.scrollIntoView({behavior:"smooth"});
+ document.getElementById("video-"+i)?.scrollIntoView({behavior:"smooth"});
 }
 </script>
 
